styles.css
#container {
    display: grid;
    width: 30vw;
    height: 30vh;
    grid-template: repeat(3,10vw) / repeat(3,10vh);
}

.box {
    border: 1px solid black;
    font-size: 48px;
    justify-content: center;
    display: grid;
}

.x,
.o {
    justify-self: center;
    align-self: center;
}

.x {
    color: red;
}

.o {
    color: blue;
}

